-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs17
-
Component/s: hotspot
-
b09
-
sparc
-
solaris_10
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2188203 | 7 | Vladimir Kozlov | P4 | Closed | Fixed | b83 |
| JDK-2189821 | 6u21 | Vladimir Kozlov | P4 | Resolved | Fixed | b01 |
I added the next change for 6614597:
// call this when compiler finds that this method is not compilable
void methodOopDesc::set_not_compilable(int comp_level) {
+ if (PrintCompilation) {
+ ttyLocker ttyl;
+ tty->print("made not compilable ");
+ this->print_short_name(tty);
+ int size = this->code_size();
+ if (size > 0)
+ tty->print(" (%d bytes)", size);
+ tty->cr();
+ }
And when "-XX:+PrintCompilation -Xcomp and -XX:CompileOnly=Test.test"
flags are specified we get a lot of lines like this:
made not compilable java.lang.Thread::<init> (49 bytes)
made not compilable java.lang.System::getProperty (25 bytes)
...
made not compilable java.lang.Exception::<init> (7 bytes)
As result some tests in Nightly failed because they grep for exceptions:
test/closed/compiler/4903383/Test4903383.sh
------------------------------------
grep "java.lang.Exception" test.out
if [ $? = 0 ]
then
echo "Test Failed"
exit 1
else
echo "Test Passed"
exit 0
fi
-----------------------------------
It seems, I need to modify the print code to check for Xcomp -XX:CompileOnly combination.
// call this when compiler finds that this method is not compilable
void methodOopDesc::set_not_compilable(int comp_level) {
+ if (PrintCompilation) {
+ ttyLocker ttyl;
+ tty->print("made not compilable ");
+ this->print_short_name(tty);
+ int size = this->code_size();
+ if (size > 0)
+ tty->print(" (%d bytes)", size);
+ tty->cr();
+ }
And when "-XX:+PrintCompilation -Xcomp and -XX:CompileOnly=Test.test"
flags are specified we get a lot of lines like this:
made not compilable java.lang.Thread::<init> (49 bytes)
made not compilable java.lang.System::getProperty (25 bytes)
...
made not compilable java.lang.Exception::<init> (7 bytes)
As result some tests in Nightly failed because they grep for exceptions:
test/closed/compiler/4903383/Test4903383.sh
------------------------------------
grep "java.lang.Exception" test.out
if [ $? = 0 ]
then
echo "Test Failed"
exit 1
else
echo "Test Passed"
exit 0
fi
-----------------------------------
It seems, I need to modify the print code to check for Xcomp -XX:CompileOnly combination.
- backported by
-
JDK-2189821 failed nightly tests which use -XX:+PrintCompilation -Xcomp -XX:CompileOnly
-
- Resolved
-
-
JDK-2188203 failed nightly tests which use -XX:+PrintCompilation -Xcomp -XX:CompileOnly
-
- Closed
-
- relates to
-
JDK-6614597 Performance variability in jvm2007 xml.validation
-
- Resolved
-