6923043: failed nightly tests which use -XX:+PrintCompilation -Xcomp -XX:CompileOnly

Print "made not compilable" line  only for deoptimizations.

Reviewed-by: never